--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,11 @@
     <title>CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Akapit pierwszy</h1>
-    <p>Lorem ipsum dolor sit amet consectetur <span>adipisicing elit.</span> Nesciunt eum voluptatem cupiditate reprehenderit minima vero quam ipsa aliquid voluptatum cum?</p>
+    <p>Lorem ipsum dolor sit amet consectetur <span>adipisicing elit.</span> Nesciunt eum voluptatem cupiditate
+        reprehenderit minima vero quam ipsa aliquid voluptatum cum?</p>
 </body>
+
 </html>
